feat: Implement responsive restaurant filtering

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </section>
     <section>
       <div class="filter-options">
+        <div class="filter-options-handler">&#9776;</div>
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
