refactor: Prevent oversizing of images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section>
+    <section id="main-container">
       <div class="filter-options">
         <div class="filter-options-handler">&#9776;</div>
         <h2>Filter Results</h2>
