--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </section>
   </main>
 
+  <script type="application/javascript" charset="utf-8" src="js/picture-polyfill.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQWBcKFwwN4FcDn_wklYA2FmycQMrw99M&libraries=places&callback=initMap"></script>
