feat: resolving accessibility issues
Fix map visibility on screen readers
Update checklist

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" tabindex="0" aria-label="Google Map" aria-hidden="true">
+      <div id="map" role="application" aria-hidden="true"></div>
     </section>
     <section id="main-container">
       <div class="filter-options">
